-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.1057 2011-05-29 03:32:50 guru Exp $
-----------------------------------------------------------------------------------------

2011-05-28	pwessel
	* gmt_support.c:	Due to different argument order for qsort_r in BSD vs glibc
				we needed to add wasteful $ifdefs to deal with this stupidity
				as *contour crashed under non-BSD system in qsort_r.

2011-05-26	pwessel
	* gmt_map.c:		GMT_wesn_clip needed to adjust longitudes to fit the given domain.
	* grdblend_func.c:	Must carefully set region passed to GMT_grdsample.
	* grdsample_func.c:	Must handle any +-360 offsets between header and -R for geo grids.
	* spotter/grdrotater_func.c:	Incorrectly used last segment min/max and not table min/max
				to determine rotated grid extent. Do not sample outside polygon.
	* psxy[z]_func.c:	For -Sm, if -G not set, copy color from -W since this symbol needs
				both fill and pen to work.

2011-05-25	remko
	* pslegend_func.c:	Label (L) should have default font FONT_LABEL, not FONT_TITLE.
				Default font color was not maintained in output of L or H.

2011-05-25	pwessel
	* grdblend_func.c:	Fixed read error in info file, and the phase check.
				Added blend.sh script to test suite.
				Needed better longitude test to determine overlap.
	* grdinfo_func.c:	Needed to free grid between files to reset header.
				Improved selecting correct lon-range formatting.
	* spotter/grdrotator_func.c:	Ensure output has same grid spacing.

2011-05-24	remko
	* psscale_func.c:	Overrule MAP_FRAME_AXES default; make it WESN.
				Do not double plot the frame line along the annotate axis.
				Let WESN setting on -B work properly with -A.

2011-05-24	pwessel
	* nearneighbor_func.c:	The -N1 selection did not reset the minimum sector setting to 1.
				Improved node-search using common machinery in gmt_support.c
	* grdmask_func.c:	Improved node-search using common machinery in gmt_support.c